# pwnchk

./: .gitignore  Makefile  README.md  pwnchk.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: main.yml
pwnchk/: __init__.py  pwnchk.py
