[metadata]
name = pwnchk
version = attr: pwnchk.__version__
author = Fionn Fitzmaurice
description = Check if a password has been pwned
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fionn/pwnchk
keywords =
    haveibeenpwned
    password
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Security :: Cryptography
    Typing :: Typed
project_urls =
    Source Code = https://github.com/fionn/pwnchk
    Changelog = https://github.com/fionn/pwnchk/tags
    Documentation = https://github.com/fionn/pwnchk/blob/master/README.md
    Bug Tracker = https://github.com/fionn/pwnchk/issues
    PyPI = https://pypi.org/project/pwnchk/
    Download = https://github.com/fionn/pwnchk/archive/refs/heads/master.zip

[options]
zip_safe = false
pymodules = pwnchk
include_package_data = true
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    pwnchk = pwnchk:main

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    pylint
    mypy
    types-requests
